Se agrega dependencia de omnisuite-core

--- a/omnisuite/omnisuite-vo/pom.xml
+++ b/omnisuite/omnisuite-vo/pom.xml
@@ -6,4 +6,11 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>omnisuite-vo</artifactId>
+  <dependencies>
+  	<dependency>
+  		<groupId>com.finmex.omnisuite</groupId>
+  		<artifactId>omnisuite-core</artifactId>
+  		<version>0.0.1-SNAPSHOT</version>
+  	</dependency>
+  </dependencies>
 </project>
