--- a/omnisuite/omnisuite-rest/pom.xml
+++ b/omnisuite/omnisuite-rest/pom.xml
@@ -25,6 +25,14 @@
 			<artifactId>omnisuite-vo</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.3.1</version>
+		</dependency>
+		
+
 	</dependencies>
 	<build>
 		<finalName>omnisuite-rest</finalName>
