--- a/omnisuite/pom.xml
+++ b/omnisuite/pom.xml
@@ -20,4 +20,17 @@
 		<module>omnisuite-rest</module>
 	</modules>
 
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.3</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
 </project>
