--- a/omnisuite/pom.xml
+++ b/omnisuite/pom.xml
@@ -6,19 +6,29 @@
 	<artifactId>omnisuite</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
+
+	<modules>
+		<module>omnisuite-core</module>
+		<module>omnisuite-vo</module>
+		<module>omnisuite-rest</module>
+	</modules>
+
 	<dependencies>
+		<!-- JEE6 -->
 		<dependency>
 			<groupId>javax</groupId>
 			<artifactId>javaee-api</artifactId>
 			<version>6.0</version>
 			<scope>provided</scope>
 		</dependency>
+
+		<!-- Log4j -->
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
 	</dependencies>
-	<modules>
-		<module>omnisuite-core</module>
-		<module>omnisuite-vo</module>
-		<module>omnisuite-rest</module>
-	</modules>
 
 	<build>
 		<plugins>
@@ -29,6 +39,12 @@
 					<source>1.7</source>
 					<target>1.7</target>
 				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.2</version>
 			</plugin>
 		</plugins>
 	</build>
