--- a/omnisuite/omnisuite-rest/src/main/webapp/WEB-INF/web.xml
+++ b/omnisuite/omnisuite-rest/src/main/webapp/WEB-INF/web.xml
@@ -8,15 +8,16 @@
   <display-name>Finmex Omnisuite</display-name>
   <servlet>
         <servlet-name>jersey-serlvet</servlet-name>
-        <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
+        <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
-            <param-name>javax.ws.rs.core.Application</param-name>
-            <param-value>com.finmex.omnisuite.service.app.RestApplication</param-value>
+            <param-name>jersey.config.server.provider.packages</param-name>
+            <param-value>com.finmex.omnisuite.prueba.service</param-value>
         </init-param>
-        <init-param>
+
+        <!-- <init-param>
             <param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
             <param-value>true</param-value>
-        </init-param>
+        </init-param> -->
         <load-on-startup>1</load-on-startup>
     </servlet>
 </web-app>
