Adecuaciones a composición del proyecto.
Se agregan módulos de utils y excepciones junto con las respectivas 
adecuaciones a los módulos ya existentes. Se agregan excepciones por
módulo de negocio y excepción padre. Se cambia nombre del proyecto
omnisuite-rest a omnisuite-service.

Signed-off-by: SquallxLeonhart <leonxleonhart@live.com.mx>

--- a/omnisuite/omnisuite-core/pom.xml
+++ b/omnisuite/omnisuite-core/pom.xml
@@ -12,5 +12,17 @@
 		<artifactId>omnisuite-vo</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</dependency>
+	
+	<dependency>
+		<groupId>com.finmex.omnisuite</groupId>
+		<artifactId>omnisuite-excepciones</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</dependency>
+	
+	<dependency>
+		<groupId>com.finmex.omnisuite</groupId>
+		<artifactId>omnisuite-utils</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</dependency>
   </dependencies>
 </project>
