--- a/omnisuite/omnisuite-vo/pom.xml
+++ b/omnisuite/omnisuite-vo/pom.xml
@@ -1,11 +1,20 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <artifactId>omnisuite-vo</artifactId>
+  
   <parent>
     <groupId>com.finmex.omnisuite</groupId>
     <artifactId>omnisuite</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
-  <artifactId>omnisuite-vo</artifactId>
+  
+  <dependencies>
+  	<dependency>
+  		<groupId>com.finmex.omnisuite</groupId>
+  		<artifactId>omnisuite-utils</artifactId>
+  		<version>0.0.1-SNAPSHOT</version>
+  	</dependency>
+  </dependencies>
   
   <!-- <build>
 		<plugins>
@@ -46,4 +55,5 @@
 			</plugin>
 		</plugins>
 	</build> -->
+  
 </project>
