Adecuaciones al proyecto y nuevas funcionalidades.
Se agrega manejo de excepciones con JAX-RS.
Se agrega el uso de jersey-json-jackson para el manejo de java-json
Se introduce la respuesta estándar con json para éxito y error.
Se agregan constantes para códigos de servicio y constantes de por
módulo.
Se agrega constante para usar charset=utf-8 a la respuesta de los
servicios.

Signed-off-by: SquallxLeonhart <leonxleonhart@live.com.mx>

--- a/omnisuite/pom.xml
+++ b/omnisuite/pom.xml
@@ -6,13 +6,13 @@
 	<artifactId>omnisuite</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
-	
+
 	<properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <jee.version>6.0</jee.version>
-        <jersey.version>2.19</jersey.version>
-        <log4j.version>1.2.17</log4j.version>
-    </properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<jee.version>6.0</jee.version>
+		<jersey.version>2.19</jersey.version>
+		<log4j.version>1.2.17</log4j.version>
+	</properties>
 
 	<modules>
 		<module>omnisuite-service</module>
@@ -37,21 +37,22 @@
 			<artifactId>log4j</artifactId>
 			<version>${log4j.version}</version>
 		</dependency>
-		
+
 		<!-- Jersey -->
 		<dependency>
-            <groupId>org.glassfish.jersey.containers</groupId>
-            <!-- <artifactId>jersey-container-servlet-core</artifactId> -->
-            <!-- use the following artifactId if you don't need servlet 2.x compatibility -->
-            <artifactId>jersey-container-servlet</artifactId>
-            <version>${jersey.version}</version>
-        </dependency>
-        <!--  uncomment this to get JSON support -->
-        <dependency>
-            <groupId>org.glassfish.jersey.media</groupId>
-            <artifactId>jersey-media-moxy</artifactId>
-            <version>${jersey.version}</version>
-        </dependency>
+			<groupId>org.glassfish.jersey.containers</groupId>
+			<!-- <artifactId>jersey-container-servlet-core</artifactId> -->
+			<!-- use the following artifactId if you don't need servlet 2.x compatibility -->
+			<artifactId>jersey-container-servlet</artifactId>
+			<version>${jersey.version}</version>
+		</dependency>
+		<!-- Jersey JSON support -->
+		<dependency>
+			<groupId>org.glassfish.jersey.media</groupId>
+			<artifactId>jersey-media-json-jackson</artifactId>
+			<version>${jersey.version}</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
