--- a/omnisuite/omnisuite-excepciones/pom.xml
+++ b/omnisuite/omnisuite-excepciones/pom.xml
@@ -16,5 +16,11 @@
   		<artifactId>omnisuite-utils</artifactId>
   		<version>0.0.1-SNAPSHOT</version>
   	</dependency>
+  	
+  	<dependency>
+  		<groupId>com.finmex.omnisuite</groupId>
+  		<artifactId>omnisuite-vo</artifactId>
+  		<version>0.0.1-SNAPSHOT</version>
+  	</dependency>
   </dependencies>
 </project>
