--- a/omnisuite/omnisuite-service/src/main/resources/log4j.properties
+++ b/omnisuite/omnisuite-service/src/main/resources/log4j.properties
@@ -6,5 +6,5 @@ log4j.rootLogger=DEBUG, stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=[%d{dd-MM-yy HH:mm:ss,SSS}] %5p (%4C{4}-%3M:%2L) -> %m%n
+log4j.appender.stdout.layout.ConversionPattern=[%d{dd-MM-yy HH:mm:ss,SSS}] %5p (%4C{4}.%3M: line %2L) -> %m%n
 											   
