Se regresa final Name original.

--- a/omnisuite/omnisuite-service/pom.xml
+++ b/omnisuite/omnisuite-service/pom.xml
@@ -39,6 +39,6 @@
 		</dependency>
 	</dependencies>
 	<build>
-		<finalName>omnisuite-integracion</finalName>
+		<finalName>omnisuite-service</finalName>
 	</build>
 </project>
