Configuración de aplicación.
Se agrega configuración global de jackson para manejo de fechas,
propiedades no incluidas en json cuando son null, ignorar propiedades
desconocidas en Json de entrada.
Se agregan constantes de path de la aplicación global.
Se quita web.xml ya que es manejado por la clase RestApplication (web
3.0)
Se agrega capacidad de usar propiedades en el pom global en archivos
localizados en src/main/resources de los proyectos.

--- a/omnisuite/omnisuite-service/pom.xml
+++ b/omnisuite/omnisuite-service/pom.xml
@@ -39,6 +39,6 @@
 		</dependency>
 	</dependencies>
 	<build>
-		<finalName>omnisuite-service</finalName>
+		<finalName>${project.filename}</finalName>
 	</build>
 </project>
