--- a/omnisuite/omnisuite-service/src/main/resources/log4j.properties
+++ b/omnisuite/omnisuite-service/src/main/resources/log4j.properties
@@ -1,10 +1,18 @@
 # Root logger option
 # Nivel y Apender stdout a consola
-log4j.rootLogger=DEBUG, stdout
+log4j.rootLogger=DEBUG, stdout, logfile
  
 # Mensajes a consola
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=[%d{dd-MM-yy HH:mm:ss,SSS}] %5p (%4C{4}.%3M: line %2L) -> %m%n
-											   
+
+# Mensajes a archivo
+log4j.appender.logfile=org.apache.log4j.RollingFileAppender
+log4j.appender.logfile.File=/opt/logs/${artifactId}/${artifactId}.log
+log4j.appender.logfile.MaxFileSize=2048KB
+# Keep three backup files.
+log4j.appender.logfile.MaxBackupIndex=20
+log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
+log4j.appender.logfile.layout.ConversionPattern=[%d{dd-MM-yy HH:mm:ss,SSS}] %5p (%4C{4}.%3M: line %2L) -> %m%n
