--- a/omnisuite/pom.xml
+++ b/omnisuite/pom.xml
@@ -12,6 +12,7 @@
 		<jee.version>6.0</jee.version>
 		<jersey.version>2.19</jersey.version>
 		<log4j.version>1.2.17</log4j.version>
+		<project.filename>omnisuite-service</project.filename>
 	</properties>
 
 	<modules>
@@ -71,7 +72,23 @@
 				<artifactId>tomcat7-maven-plugin</artifactId>
 				<version>2.2</version>
 			</plugin>
+			
+			<plugin>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>2.6</version>
+				<configuration>
+					<warSourceDirectory>WebContent</warSourceDirectory>
+					<failOnMissingWebXml>false</failOnMissingWebXml>
+				</configuration>
+			</plugin>
 		</plugins>
+		
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
 	</build>
 
 </project>
