--- a/omnisuite/omnisuite-service/src/main/resources/log4j.properties
+++ b/omnisuite/omnisuite-service/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
 # Root logger option
 # Nivel y Apender stdout a consola
-log4j.rootLogger=DEBUG, stdout, logfile
+log4j.rootLogger=INFO, stdout, logfile
  
 # Mensajes a consola
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
