--- a/omnisuite/pom.xml
+++ b/omnisuite/pom.xml
@@ -53,6 +53,20 @@
 			<artifactId>jersey-media-json-jackson</artifactId>
 			<version>${jersey.version}</version>
 		</dependency>
+	    
+	    <!-- Jersey CDI Support support -->
+	    <dependency>
+		    <groupId>org.glassfish.jersey.ext.cdi</groupId>
+		    <artifactId>jersey-cdi1x</artifactId>
+		    <version>2.19</version>
+		</dependency>
+
+		<!-- Implementación de CDI -->
+	 	<dependency>
+			<groupId>org.jboss.weld.servlet</groupId>
+			<artifactId>weld-servlet</artifactId>
+			<version>2.2.14.Final</version>
+		</dependency>
 
 	</dependencies>
 
@@ -72,7 +86,7 @@
 				<artifactId>tomcat7-maven-plugin</artifactId>
 				<version>2.2</version>
 			</plugin>
-			
+
 			<plugin>
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.6</version>
@@ -82,7 +96,7 @@
 				</configuration>
 			</plugin>
 		</plugins>
-		
+
 		<resources>
 			<resource>
 				<directory>src/main/resources</directory>
